--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 
   <link rel="stylesheet" href="style.css">
 
@@ -162,6 +163,36 @@
         </div>
       </div>
     </section>
+
+
+<section id="certificates" class="mt-5">
+  <h2 class="reveal">Certificates</h2>
+
+  <div class="row mt-3">
+    <div class="col-md-4 reveal">
+      <div class="certificate-card" data-bs-toggle="modal" data-bs-target="#certificateModal">
+        <img src="cert.jpg" class="certificate-img" alt="Certificate">
+        <h5>Educational Tour</h5>
+        <p>Completion Date: November 2025</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="certificateModal" tabindex="-1" aria-labelledby="certificateModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="certificateModalLabel">Certificate Image</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="cert.jpg" class="img-fluid" alt="Certificate" />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   
     <section id="tour" class="mt-5">
