--- a/index.html
+++ b/index.html
@@ -194,12 +194,84 @@
   </div>
 </section>
 
+  <!-- Tour image modals -->
+  <div class="modal fade" id="tourModal1" tabindex="-1" aria-labelledby="tourModal1Label" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tourModal1Label">Day 1 — Worldtech</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <img src="worldtech.png" class="img-fluid" alt="Day 1">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="tourModal2a" tabindex="-1" aria-labelledby="tourModal2aLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tourModal2aLabel">Day 2 — Codechum</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <img src="codechum.png" class="img-fluid" alt="Day 2 — Codechum">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="tourModal2b" tabindex="-1" aria-labelledby="tourModal2bLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tourModal2bLabel">Day 2 — Rivan IT</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <img src="rivanit.png" class="img-fluid" alt="Day 2 — Rivan IT">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="tourModal3" tabindex="-1" aria-labelledby="tourModal3Label" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tourModal3Label">Day 3 — MATA Technologies</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <img src="mata.png" class="img-fluid" alt="Day 3">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="tourModal4" tabindex="-1" aria-labelledby="tourModal4Label" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tourModal4Label">Day 4 — TaRSIER 117</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <img src="tarsier117.png" class="img-fluid" alt="Day 4">
+        </div>
+      </div>
+    </div>
+  </div>
+
   
     <section id="tour" class="mt-5">
   <h2 class="reveal">Educational Tour — Cebu & Bohol</h2>
   <div class="tour-grid reveal mt-3">
 
     <div class="tour-card">
+      <img src="worldtech.png" class="tour-img img-fluid" alt="Day 1" data-bs-toggle="modal" data-bs-target="#tourModal1" role="button">
       <strong>Day 1</strong>
       <p class="text-muted mt-2">Worldtech Information Solutions Inc.</p>
       <p>Observations: Worldtech is a well-established IT consultancy and training provider with a strong presence in Cebu, Manila, and beyond. They specialize in cybersecurity training and offer various certification programs, with highly experienced trainers.</p>
@@ -207,6 +279,10 @@
     </div>
 
     <div class="tour-card">
+      <div class="tour-img-row">
+        <img src="codechum.png" class="tour-img img-fluid" alt="Day 2 — Codechum" data-bs-toggle="modal" data-bs-target="#tourModal2a" role="button">
+        <img src="rivanit.png" class="tour-img img-fluid" alt="Day 2 — Rivan IT" data-bs-toggle="modal" data-bs-target="#tourModal2b" role="button">
+      </div>
       <strong>Day 2</strong>
       <p class="text-muted mt-2">Codechum and Rivan IT</p>
 
@@ -220,6 +296,7 @@
     </div>
 
     <div class="tour-card">
+      <img src="mata.png" class="tour-img img-fluid" alt="Day 3" data-bs-toggle="modal" data-bs-target="#tourModal3" role="button">
       <strong>Day 3</strong>
       <p class="text-muted mt-2">MATA Technologies, Inc.</p>
       <p>Observations: During my visit to MATA Technologies, Inc., I was impressed by their optics and innovation in the virtual reality and technology sector. Their team is friendly and passionate about their work, showcasing how they are creating interactive virtual tours for real estate and tourism. I noticed how advanced their platform helps clients deliver “smarter” tours — opening new possibilities for customers.</p>
@@ -227,6 +304,7 @@
     </div>
 
     <div class="tour-card">
+      <img src="tarsier117.png" class="tour-img img-fluid" alt="Day 4" data-bs-toggle="modal" data-bs-target="#tourModal4" role="button">
       <strong>Day 4</strong>
       <p class="text-muted mt-2">Telephone and Radio System Integrated Emergency Response (TaRSIER 117)</p>
       <p>Observations: During my visit to TaRSIER 117, I observed that their mobile unit is well-organized and equipped for quick emergency response. The team is highly professional, approachable, and clearly dedicated to ensuring the safety of both locals and tourists. I also noticed strong collaboration with other agencies like the PNP, BFP, and DOT, which shows how seriously they take public safety and disaster preparedness.</p>
